--- a/res/values-kk/strings.xml
+++ b/res/values-kk/strings.xml
@@ -783,7 +783,7 @@
     <string name="lockpattern_tutorial_cancel_label" msgid="775215267818384016">"Бас тарту"</string>
     <string name="lockpattern_tutorial_continue_label" msgid="1329049481210689408">"Келесі"</string>
     <string name="manage_device_admin" msgid="1044620606203916275">"Құрылғы әкімшісінің қолданбалары"</string>
-    <string name="number_of_device_admins_none" msgid="152926922020437312">"Істеп тұрған қолданбалар жоқ"</string>
+    <string name="number_of_device_admins_none" msgid="152926922020437312">"Істеп тұрған қолданбалар жоқ."</string>
     <string name="number_of_device_admins" msgid="3402909995362162876">"{count,plural, =1{# қолданба істеп тұр}other{# қолданба істеп тұр}}"</string>
     <string name="manage_trust_agents" msgid="6410149930029992356">"Сенімді агенттер"</string>
     <string name="disabled_because_no_backup_security" msgid="4998095356607488854">"Пайдалану үшін алдымен экран құлпын орнатыңыз."</string>
@@ -4620,7 +4620,7 @@
     <string name="sim_onboarding_bottomsheets_title" msgid="143711121394213711">"SIM картасын реттеу"</string>
     <string name="sim_onboarding_bottomsheets_msg" msgid="7367245016476460849">"Осы құрылғыда бірнеше SIM картасын пайдалану үшін мобильдік желі параметрлерін реттеңіз."</string>
     <string name="sim_onboarding_label_sim_title" msgid="273162565849288273">"SIM карталарын белгілеу"</string>
-    <string name="sim_onboarding_label_sim_msg" msgid="5105859235219529056">"Бұл белгілерді қоңырау шалғанда, мәтіндік хабарлар жібергенде және деректерді пайдаланған кезде, сондай-ақ \"Параметрлерде\" көресіз."</string>
+    <string name="sim_onboarding_label_sim_msg" msgid="5105859235219529056">"Бұл белгілерді қоңырау шалғанда, мәтіндік хабарлар жібергенде және деректерді пайдаланған кезде, сондай-ақ параметрлерде көресіз."</string>
     <string name="sim_onboarding_label_sim_dialog_title" msgid="5839073125605286120">"SIM картасының белгісі"</string>
     <string name="sim_onboarding_label_sim_dialog_label" msgid="9020433985426525185">"Белгі"</string>
     <string name="sim_onboarding_select_sim_title" msgid="5895262188167744055">"Пайдаланатын SIM картасын таңдау"</string>
