--- a/res/values-km/strings.xml
+++ b/res/values-km/strings.xml
@@ -290,7 +290,7 @@
     <string name="disabled_by_administrator_summary" msgid="5424846182313851124">"មិនមានទេ"</string>
     <string name="security_status_title" msgid="6958004275337618656">"ស្ថានភាព​សុវត្ថិភាព"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"ការចាក់សោ​អេក្រង់ កម្មវិធី​រកឧបករណ៍របស់ខ្ញុំ សុវត្ថិភាព​កម្មវិធី"</string>
-    <string name="safety_center_title" msgid="7732397372178774777">"សុវត្ថិភាព និងឯកជនភាព"</string>
+    <string name="safety_center_title" msgid="7732397372178774777">"សន្តិសុខ និងឯកជនភាព"</string>
     <string name="safety_center_summary" msgid="3554867379951053869">"សុវត្ថិភាពកម្មវិធី ការចាក់សោឧបករណ៍ ការអនុញ្ញាត"</string>
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"បាន​បញ្ចូល​មុខ"</string>
     <string name="security_settings_face_preference_summary_none" msgid="523320857738436024">"ត្រូវការរៀបចំ"</string>
@@ -536,7 +536,7 @@
     <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="345336447137417638">"ការអ៊ីនគ្រីប ព័ត៌មានផ្ទៀងផ្ទាត់ និងអ្វីៗជាច្រើនទៀត"</string>
     <string name="security_advanced_settings_keywords" msgid="5294945170370974974">"សុវត្ថិភាព ការកំណត់សុវត្ថិភាពច្រើនទៀត ការកំណត់ច្រើនទៀត ការកំណត់សុវត្ថិភាពកម្រិតខ្ពស់"</string>
     <string name="privacy_advanced_settings" msgid="8828215456566937719">"ការកំណត់ឯកជនភាព​ច្រើនទៀត"</string>
-    <string name="more_security_privacy_settings" msgid="123465614090328851">"ឯកជនភាព និងសុវត្ថិភាពបន្ថែម"</string>
+    <string name="more_security_privacy_settings" msgid="123465614090328851">"សន្តិសុខ និងឯកជនភាពបន្ថែម"</string>
     <string name="security_header" msgid="961514795852103424">"សុវត្ថិភាព"</string>
     <string name="privacy_header" msgid="5526002421324257007">"ឯកជនភាព"</string>
     <string name="work_profile_category_header" msgid="85707750968948517">"កម្រងព័ត៌មានការងារ"</string>
