--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -2796,7 +2796,7 @@
     <string name="data_usage_background_label" msgid="5363718469293175279">"Фоновый режим"</string>
     <string name="data_usage_app_settings" msgid="5693524672522122485">"Настройки приложения"</string>
     <string name="data_usage_app_restrict_background" msgid="5728840276368097276">"Фоновый режим"</string>
-    <string name="data_usage_app_restrict_background_summary" msgid="2997942775999602794">"Разрешить мобильное подключение к интернету в фоновом режиме"</string>
+    <string name="data_usage_app_restrict_background_summary" msgid="2997942775999602794">"Разрешить подключение к мобильному интернету в фоновом режиме"</string>
     <string name="data_usage_app_restrict_background_summary_disabled" msgid="8213268097024597864">"Сначала установите лимит для мобильного трафика."</string>
     <string name="data_usage_app_restrict_dialog_title" msgid="5383874438677899255">"Ограничение фонового режима"</string>
     <string name="data_usage_app_restrict_dialog" msgid="5534272311979978297">"Если будут доступны только мобильные сети, программы, зависящие от фонового режима, могут перестать работать.\n\nУстановите другие параметры передачи данных в настройках приложения."</string>
