--- a/res/values-te/strings.xml
+++ b/res/values-te/strings.xml
@@ -2796,7 +2796,7 @@
     <string name="data_usage_background_label" msgid="5363718469293175279">"బ్యాక్‌గ్రౌండ్:"</string>
     <string name="data_usage_app_settings" msgid="5693524672522122485">"యాప్‌ సెట్టింగ్‌లు"</string>
     <string name="data_usage_app_restrict_background" msgid="5728840276368097276">"బ్యాక్‌గ్రౌండ్ డేటా"</string>
-    <string name="data_usage_app_restrict_background_summary" msgid="2997942775999602794">"బ్యాక్‌గ్రౌండ్‌లో మొబైల్ డేటా వినియోగాన్ని ప్రారంభిస్తుంది"</string>
+    <string name="data_usage_app_restrict_background_summary" msgid="2997942775999602794">"బ్యాక్‌గ్రౌండ్‌లో మొబైల్ డేటా వినియోగాన్ని ఎనేబుల్ చేస్తుంది"</string>
     <string name="data_usage_app_restrict_background_summary_disabled" msgid="8213268097024597864">"ఈ యాప్ కోసం నేపథ్య డేటాను పరిమితం చేయడానికి, ముందుగా మొబైల్ డేటా పరిమితిని సెట్ చేయాలి."</string>
     <string name="data_usage_app_restrict_dialog_title" msgid="5383874438677899255">"నేపథ్య డేటాను పరిమితం చేయాలా?"</string>
     <string name="data_usage_app_restrict_dialog" msgid="5534272311979978297">"ఈ లక్షణం మొబైల్ నెట్‌వర్క్‌లు మాత్రమే అందుబాటులో ఉన్నప్పుడు నేపథ్య డేటాపై ఆధారపడే యాప్‌ను పని చేయనీయకుండా ఆపివేయవచ్చు.\n\nమీరు అనువర్తనంలోనే అందుబాటులో ఉన్న సెట్టింగ్‌ల్లో మరిన్ని సముచితమైన డేటా వినియోగ నియంత్రణలను కనుగొనవచ్చు."</string>
