--- a/res/values-zh-rHK/strings.xml
+++ b/res/values-zh-rHK/strings.xml
@@ -536,7 +536,7 @@
     <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="345336447137417638">"加密、憑證等"</string>
     <string name="security_advanced_settings_keywords" msgid="5294945170370974974">"安全性, 更多安全性設定, 更多設定, 進階安全性設定"</string>
     <string name="privacy_advanced_settings" msgid="8828215456566937719">"更多私隱權設定"</string>
-    <string name="more_security_privacy_settings" msgid="123465614090328851">"更多安全性和私隱權設定"</string>
+    <string name="more_security_privacy_settings" msgid="123465614090328851">"更多安全性和私隱設定"</string>
     <string name="security_header" msgid="961514795852103424">"保安"</string>
     <string name="privacy_header" msgid="5526002421324257007">"私隱"</string>
     <string name="work_profile_category_header" msgid="85707750968948517">"工作設定檔"</string>
@@ -4180,7 +4180,7 @@
     <string name="system_navigation_title" msgid="4890381153527184636">"導覽模式"</string>
     <string name="swipe_up_to_switch_apps_title" msgid="6677266952021118342">"雙按鈕導覽"</string>
     <string name="swipe_up_to_switch_apps_summary" msgid="1415457307836359560">"如要切換應用程式，請從主按鈕向上滑動。如要查看所有應用程式，請再次向上滑動。如要返回，請輕按 [返回] 按鈕。"</string>
-    <string name="emergency_settings_preference_title" msgid="6183455153241187148">"安全性與緊急服務"</string>
+    <string name="emergency_settings_preference_title" msgid="6183455153241187148">"安全性與緊急情況"</string>
     <string name="emergency_dashboard_summary" msgid="401033951074039302">"緊急求救、醫療資訊、警報"</string>
     <string name="edge_to_edge_navigation_title" msgid="714427081306043819">"手勢導覽"</string>
     <string name="edge_to_edge_navigation_summary" msgid="818109176611921504">"從螢幕底部向上滑動即可前往主畫面。如要切換應用程式，請從螢幕底部向上滑動並按住，然後放手。如要返回上一個畫面，請從螢幕左側或右側往另一側滑動。"</string>
