--- a/res/values-zu/strings.xml
+++ b/res/values-zu/strings.xml
@@ -2694,7 +2694,7 @@
     <string name="backup_inactive_title" msgid="6753265378043349277">"Isevisi yokwenza isipele ayisebenzi"</string>
     <string name="backup_configure_account_default_summary" msgid="5323225330966306690">"Ayikho i-akhawunti okwamanje egcina ukusekela ngokulondoloza idatha"</string>
     <string name="backup_erase_dialog_title" msgid="5892431263348766484"></string>
-    <string name="backup_erase_dialog_message" msgid="2250872501409574331">"Yeka ukulondoloza amaphasiwedi akho e-Wi-Fi, amabhukhimaki, ezinye izilungiselelo, kanye nedatha yezinhlelo zokusebenza, nokususa onke amakhophi kumaseva we-Google?"</string>
+    <string name="backup_erase_dialog_message" msgid="2250872501409574331">"Yeka ukulondoloza amaphasiwedi akho eWi-Fi, amabhukhimaki, amanye amasethingi, kanye nedatha ye-app, nokususa onke amakhophi kumaseva weGoogle?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="2379053988557486162">"Misa ukwenza isipele idatha yedivayisi (njengamaphasiwedi we-Wi-Fi nomlando wekholi) nedatha yohlelo lokusebenza (njengezilungiselelo namafayela alondolozwe izinhlelo zokusebenza), futhi nokusula wonke amakhophi kumaseva werimothi?"</string>
     <string name="fullbackup_data_summary" msgid="971587401251601473">"Yenza isipele ngokuzenzakalela idatha yedivayisi (efana namaphasiwedi we-Wi-Fi nomlando wokushaya) nedatha yohlelo lokusebenza (efana nezilungiselelo namafayela agcinwe yizinhlelo zokusebenza) ngokulawula kude.\n\nUma uvula isipele ngokuzenzakalela, idivayisi nedatha yohlelo lokusebenza ilondolozwa ngesikhathi ezithile ngesilawuli kude. Idatha yohlelo lokusebenza ingaba yinoma iyiphi idatha elondolozwe wuhlelo lokusebenza (kususelwa kuzilungiselelo zonjiniyela), efaka idatha enekhono lokuzwela njengoxhumana nabo, imilayezo, nezithombe."</string>
     <string name="device_admin_settings_title" msgid="31392408594557070">"Izilungiselelo zomlawuli wedivayisi"</string>
@@ -2757,7 +2757,7 @@
     <string name="header_application_sync_settings" msgid="7427706834875419243">"Izilungiselelo zokuvumelanisa uhlelo lokusebenza"</string>
     <string name="header_data_and_synchronization" msgid="453920312552838939">"Idatha nokuvumelanisa"</string>
     <string name="preference_change_password_title" msgid="5465821666939825972">"Shintsha iphasiwedi"</string>
-    <string name="header_account_settings" msgid="1189339410278750008">"Izilungiselelo ze-akhawunti"</string>
+    <string name="header_account_settings" msgid="1189339410278750008">"Amasethingi e-akhawunti"</string>
     <string name="remove_account_label" msgid="4169490568375358010">"Susa i-akhawunti"</string>
     <string name="header_add_an_account" msgid="3919151542338822661">"Yengeza i-akhawunti"</string>
     <string name="really_remove_account_title" msgid="253097435885652310">"Khipha i-akhawunti"</string>
@@ -3278,8 +3278,8 @@
     <string name="zen_mode_restrict_notifications_hide_summary" msgid="6005445725686969583">"Ngeke ubone noma uzwe izaziso"</string>
     <string name="zen_mode_restrict_notifications_hide_footer" msgid="3761837271201073330">"Ifoni yakho ngeke iboniswe, idlidlizele noma yenze umsindo wezaziso ezintsha noma ezikhona. Khumbula, izaziso ezibalulekile zomsebenzi wefoni nesimo sisazovela.\n\nUma uvala ukungaphazamisi, thola izaziso eziphuthelwe ngokuswayiphela phansi kusukela ngaphezulu kwesikrini sakho."</string>
     <string name="zen_mode_restrict_notifications_custom" msgid="5469078057954463796">"Ngokwezifiso"</string>
-    <string name="zen_mode_restrict_notifications_enable_custom" msgid="4303255634151330401">"Nika amandla isilungiselelo sangokwezifiso"</string>
-    <string name="zen_mode_restrict_notifications_disable_custom" msgid="5062332754972217218">"Susa isilungiselelo sangokwezifiso"</string>
+    <string name="zen_mode_restrict_notifications_enable_custom" msgid="4303255634151330401">"Nika amandla isethingi sangokwezifiso"</string>
+    <string name="zen_mode_restrict_notifications_disable_custom" msgid="5062332754972217218">"Susa isethingi sangokwezifiso"</string>
     <string name="zen_mode_restrict_notifications_summary_muted" msgid="4750213316794189968">"Awukho umsindo kusukela kuzaziso"</string>
     <string name="zen_mode_restrict_notifications_summary_custom" msgid="3918461289557316364">"Kufihlwe kancane"</string>
     <string name="zen_mode_restrict_notifications_summary_hidden" msgid="636494600775773296">"Akukho okubonakalayo noma umsindo kusukela kuzaziso"</string>
@@ -3342,8 +3342,8 @@
     <string name="zen_onboarding_new_setting_title" msgid="8813308612916316657">"Akukho okubonakalayo noma umsindo kusukela kuzaziso"</string>
     <string name="zen_onboarding_current_setting_title" msgid="5024603685220407195">"Awukho umsindo kusukela kuzaziso"</string>
     <string name="zen_onboarding_new_setting_summary" msgid="7695808354942143707">"Ngeke ubone noma uzwe izaziso. Amakholi kusukela koxhumana nabo abafakwe inkanyezi nabafonayo abaphindiwe avunyelwe."</string>
-    <string name="zen_onboarding_current_setting_summary" msgid="8864567406905990095">"(Isilungiselelo samanje)"</string>
-    <string name="zen_onboarding_dnd_visual_disturbances_header" msgid="8639698336231314609">"Shintsha izilungiselelo zokwazisa zokungaphazamisi?"</string>
+    <string name="zen_onboarding_current_setting_summary" msgid="8864567406905990095">"(Isethingi samanje)"</string>
+    <string name="zen_onboarding_dnd_visual_disturbances_header" msgid="8639698336231314609">"Shintsha amasethingi okwazisa okungaphazamisi?"</string>
     <string name="sound_work_settings" msgid="752627453846309092">"Imisindo yephrofayela yomsebenzi"</string>
     <string name="work_use_personal_sounds_title" msgid="7729428677919173609">"Sebenzisa imisindo yephrofayela yomuntu siqu"</string>
     <string name="work_use_personal_sounds_summary" msgid="608061627969077231">"Sebenzisa imisindo efanayo nephrofayela yakho yomuntu siqu"</string>
@@ -4429,7 +4429,7 @@
     <string name="platform_compat_default_enabled_title" msgid="8973137337738388024">"Ushintsho olunikwe amandla oluzenzakalelayo"</string>
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"Ushintsho olukhutshaziwe oluzenzakalelayo"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"Izinguquko zokuhambelana kohlelo lokusebenza zingalungiswa kuphela kuzinhlelo zokusebenza ezingalungiswa amaphutha. Faka uhlelo lokusebenza olungalungiswa amaphutha bese uzama futhi"</string>
-    <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"Kuncike kwesinye isilungiselelo"</string>
+    <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"Kuncike kwesinye isethingi"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"I-Akhawunti"</string>
     <string name="my_device_info_account_preference_summary" msgid="3510582677937510545">"ama-akhawunti angu-%d"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Igama ledivayisi"</string>
@@ -4870,7 +4870,7 @@
     <string name="category_name_display_controls" msgid="7046581691184725216">"Ezinye izilawul zesibonisi"</string>
     <string name="category_name_general" msgid="7737273712848115886">"Okuvamile"</string>
     <string name="dark_theme_main_switch_title" msgid="4045147031947562280">"Sebenzisa itimu emnyama"</string>
-    <string name="bluetooth_main_switch_title" msgid="8409835540311309632">"Sebenzisa i-Bluetooth"</string>
+    <string name="bluetooth_main_switch_title" msgid="8409835540311309632">"Sebenzisa iBluetooth"</string>
     <string name="prevent_ringing_main_switch_title" msgid="4726252811262086643">"Sebenzisa ukugwema ukukhalisa"</string>
     <string name="use_wifi_hotsopt_main_switch_title" msgid="3909731167290690539">"Sebenzisa i-Wi‑Fi hotspot"</string>
     <string name="app_pinning_main_switch_title" msgid="5465506660064032876">"Sebenzisa ukuphina i-app"</string>
