--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -1987,7 +1987,7 @@
     <string name="accessibility_settings_title" msgid="6739115703615065716">"إعدادات تسهيل الاستخدام"</string>
     <string name="accessibility_settings_summary" msgid="2366627644570558503">"العرض والتفاعل والصوت"</string>
     <string name="vision_settings_title" msgid="8919983801864103069">"إعدادات الرؤية"</string>
-    <string name="vision_settings_description" msgid="7614894785054441991">"يمكنك تخصيص هذا الجهاز ليتوافق مع احتياجاتك. ويمكن تغيير ميزات \"تسهيل الاستخدام\" هذه لاحقًا من خلال الإعدادات."</string>
+    <string name="vision_settings_description" msgid="7614894785054441991">"يمكنك تخصيص هذا الجهاز ليتوافق مع احتياجاتك. ويمكن تغيير ميزات \"تسهيل الاستخدام\" هذه لاحقًا من خلال \"الإعدادات\"."</string>
     <string name="vision_settings_suggestion_title" msgid="4689275412658803919">"تغيير حجم الخط"</string>
     <string name="screen_reader_category_title" msgid="5825700839731107803">"قارئ الشاشة"</string>
     <string name="keyboard_category_title" msgid="6841712758039893220">"لوحة المفاتيح الخارجية"</string>
@@ -3507,7 +3507,7 @@
     <string name="notification_listener_allowed" msgid="5536962633536318551">"التطبيقات المسموح لها"</string>
     <string name="notification_listener_not_allowed" msgid="3352962779597846538">"التطبيقات غير المسموح لها"</string>
     <string name="notif_listener_excluded_app_title" msgid="6679316209330349730">"عرض كل التطبيقات"</string>
-    <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"تغيير الإعدادات لكل تطبيق يُرسِل إشعارات"</string>
+    <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"يمكن تغيير الإعدادات لكل تطبيق يُرسِل إشعارات"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"التطبيقات المعروضة على الجهاز"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"لا يتوافق هذا التطبيق مع الإعدادات المحسَّنة."</string>
     <string name="notif_listener_more_settings" msgid="1348409392307208921">"إعدادات إضافية"</string>
@@ -4063,7 +4063,7 @@
     <string name="restrict_background_blocklisted" msgid="2308345280442438232">"تم إيقاف بيانات الخلفية."</string>
     <string name="data_saver_on" msgid="7848893946018448793">"قيد التفعيل"</string>
     <string name="data_saver_off" msgid="5891210864117269045">"الميزة غير مفعّلة"</string>
-    <string name="data_saver_switch_title" msgid="7111538580123722959">"استخدام أداة توفير البيانات"</string>
+    <string name="data_saver_switch_title" msgid="7111538580123722959">"استخدام ميزة \"توفير البيانات\""</string>
     <string name="unrestricted_app_title" msgid="7117585996574329284">"الاستخدام غير المقيَّد للبيانات"</string>
     <string name="unrestricted_app_summary" msgid="282698963532000403">"السماح بالاستخدام غير المحدود لبيانات الجوال عند تفعيل ميزة \"توفير البيانات\""</string>
     <string name="home_app" msgid="6056850504746902747">"تطبيق الشاشة الرئيسية"</string>
@@ -4911,7 +4911,7 @@
     <string name="all_apps" msgid="3054120149509114789">"جميع التطبيقات"</string>
     <string name="request_manage_bluetooth_permission_dont_allow" msgid="8798061333407581300">"عدم السماح"</string>
     <string name="uwb_settings_title" msgid="8578498712312002231">"‏النطاق الواسع جدًا (UWB)"</string>
-    <string name="uwb_settings_summary" msgid="3074271396764672268">"يساعد هذا الإعداد في التعرّف على الموضع النسبي للأجهزة القريبة التي تستخدم النطاق الواسع جدًا"</string>
+    <string name="uwb_settings_summary" msgid="3074271396764672268">"المساعدة في التعرّف على الموضع النسبي للأجهزة القريبة التي تستخدم النطاق الواسع جدًا"</string>
     <string name="uwb_settings_summary_airplane_mode" msgid="1328864888135086484">"يجب إيقاف وضع الطيران لاستخدام النطاق الواسع جدًا."</string>
     <string name="uwb_settings_summary_no_uwb_regulatory" msgid="3465456428217979428">"‏النطاق الفائق العرض (UWB) غير متاح في الموقع الجغرافي الحالي."</string>
     <string name="thread_network_settings_title" msgid="4212301030523859220">"Thread"</string>
