--- a/res/values-bn/strings.xml
+++ b/res/values-bn/strings.xml
@@ -1793,7 +1793,7 @@
     <string name="force_stop_dlg_text" msgid="1527286468544457368">"আপনি একটি অ্যাপ্লিকেশানকে জোর করে বন্ধ করলে, তা অস্বাভাবিক ব্যবহার করতে পারে।"</string>
     <string name="app_disable_dlg_positive" msgid="1414218905322009505">"অ্যাপ বন্ধ করুন"</string>
     <string name="app_disable_dlg_text" msgid="2449382902751908916">"আপনি এই অ্যাপ বন্ধ করে দিলে, Android এবং অন্যান্য অ্যাপ যেভাবে কাজ করার কথা সেইভাবে আর নাও কাজ করতে পারে। মনে রাখবেন যে এই অ্যাপ আপনার ডিভাইসে আগে থেকেই ইনস্টল করা আছে বলে এটি আপনি মুছে ফেলতে পারবেন না। বন্ধ করার মাধ্যমে, আপনি অ্যাপটিকে বন্ধ করে লুকিয়ে রাখতে পারেন।"</string>
-    <string name="app_install_details_group_title" msgid="1172114479073704677">"Store"</string>
+    <string name="app_install_details_group_title" msgid="1172114479073704677">"স্টোর"</string>
     <string name="app_install_details_title" msgid="7783556181897142187">"অ্যাপের বিশদ বিবরণ"</string>
     <string name="app_install_details_summary" msgid="2013043219249992373">"অ্যাপটিকে <xliff:g id="APP_STORE">%1$s</xliff:g> থেকে ইনস্টল করা হয়েছে"</string>
     <string name="instant_app_details_summary" msgid="417197491598208216">"<xliff:g id="APP_STORE">%1$s</xliff:g> সম্পর্কে আরও তথ্য"</string>
@@ -2604,7 +2604,7 @@
     <string name="menu_use_uss" msgid="1663914348353623749">"Uss ব্যবহার করুন"</string>
     <string name="menu_proc_stats_type" msgid="5048575824389855689">"পরিসংখ্যানের  প্রকার"</string>
     <string name="menu_proc_stats_type_background" msgid="6796434633192284607">"ব্যাকগ্রাউন্ড"</string>
-    <string name="menu_proc_stats_type_foreground" msgid="9011432748521890803">"পুরোভাগ"</string>
+    <string name="menu_proc_stats_type_foreground" msgid="9011432748521890803">"ফোরগ্রাউন্ড"</string>
     <string name="menu_proc_stats_type_cached" msgid="1351321959600144622">"ক্যাশে করা"</string>
     <string name="voice_input_output_settings" msgid="1055497319048272051">"ভয়েস ইনপুট ও আউটপুট"</string>
     <string name="voice_input_output_settings_title" msgid="6449454483955543064">"ভয়েস ইনপুট ও আউটপুট সেটিংস"</string>
@@ -3497,7 +3497,7 @@
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"বন্ধ করুন"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"বাতিল করুন"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"রিয়েল-টাইম"</string>
-    <string name="notif_type_ongoing_summary" msgid="2348867528527573574">"ব্যবহারে করা হচ্ছে এমন অ্যাপের কমিউনিকেশন, নেভিগেশন, ফোন কল এবং আরও অনেক কিছু"</string>
+    <string name="notif_type_ongoing_summary" msgid="2348867528527573574">"ব্যবহার করা হচ্ছে এমন অ্যাপের কমিউনিকেশন, নেভিগেশন, ফোন কল এবং আরও অনেক কিছু"</string>
     <string name="notif_type_conversation" msgid="4383931408641374979">"কথোপকথন"</string>
     <string name="notif_type_conversation_summary" msgid="179142405410217101">"এসএমএস, টেক্সট মেসেজ এবং অন্যান্য পদ্ধতিতে কমিউনিকেশন"</string>
     <string name="notif_type_alerting" msgid="4713073696855718576">"বিজ্ঞপ্তি"</string>
@@ -3954,7 +3954,7 @@
     <string name="screen_zoom_preview_title" msgid="5288355628444562735">"প্রিভিউ"</string>
     <string name="screen_zoom_make_smaller_desc" msgid="2628662648068995971">"আরো ছোট করুন"</string>
     <string name="screen_zoom_make_larger_desc" msgid="7268794713428853139">"আরো বড় করুন"</string>
-    <string name="disconnected" msgid="3469373726996129247">"কানেক্ট নয়"</string>
+    <string name="disconnected" msgid="3469373726996129247">"কানেক্ট করা নেই"</string>
     <string name="keyboard_disconnected" msgid="796053864561894531">"ডিসকানেক্ট রয়েছে"</string>
     <string name="apps_summary" msgid="4007416751775414252">"<xliff:g id="COUNT">%1$d</xliff:g>টি অ্যাপ ইনস্টল করা হয়েছে"</string>
     <string name="storage_summary" msgid="5903562203143572768">"<xliff:g id="PERCENTAGE">%1$s</xliff:g> ব্যবহৃত হয়েছে - <xliff:g id="FREE_SPACE">%2$s</xliff:g> বাকি আছে"</string>
