--- a/res/values-bs/strings.xml
+++ b/res/values-bs/strings.xml
@@ -4180,7 +4180,7 @@
     <string name="system_navigation_title" msgid="4890381153527184636">"Način rada za navigaciju"</string>
     <string name="swipe_up_to_switch_apps_title" msgid="6677266952021118342">"Navigacija pomoću 2 dugmeta"</string>
     <string name="swipe_up_to_switch_apps_summary" msgid="1415457307836359560">"Da prebacite aplikacije, na dugmetu za početni ekran prevucite prema gore. Za prikaz svih aplikacija, ponovo prevucite prema gore. Dodirnite dugme za povratak da se vratite."</string>
-    <string name="emergency_settings_preference_title" msgid="6183455153241187148">"Sigurnost i hitni pozivi"</string>
+    <string name="emergency_settings_preference_title" msgid="6183455153241187148">"Bezbjednost i hitni slučajevi"</string>
     <string name="emergency_dashboard_summary" msgid="401033951074039302">"Hitni pozivi, zdravstveni podaci, obavještenja"</string>
     <string name="edge_to_edge_navigation_title" msgid="714427081306043819">"Navigacija pokretima"</string>
     <string name="edge_to_edge_navigation_summary" msgid="818109176611921504">"Da odete na početni ekran, prevucite prema gore s dna ekrana. Da se prebacite na drugu aplikaciju, prevucite s dna prema gore, zadržite, a zatim otpustite. Da se vratite, prevucite s lijevog odnosno desnog ruba."</string>
