--- a/res/values-mr/strings.xml
+++ b/res/values-mr/strings.xml
@@ -1917,7 +1917,7 @@
     <string name="trackpad_go_home_summary" msgid="2222744701528360887">"तीन बोटांनी वरती स्‍वाइप करा"</string>
     <string name="trackpad_recent_apps_title" msgid="8195970908411585445">"अलीकडील अ‍ॅप्स"</string>
     <string name="trackpad_recent_apps_summary" msgid="2685092851677573794">"तीन बोटांनी वरती स्‍वाइप करा, नंतर धरून ठेवा"</string>
-    <string name="trackpad_notifications_title" msgid="3521663305043747880">"सूचना"</string>
+    <string name="trackpad_notifications_title" msgid="3521663305043747880">"नोटिफिकेशन"</string>
     <string name="trackpad_notifications_summary" msgid="7663647367648690040">"तीन बोटांनी खालती स्‍वाइप करा"</string>
     <string name="trackpad_switch_apps_title" msgid="7342032935377284039">"अ‍ॅप्स स्विच करा"</string>
     <string name="trackpad_switch_apps_summary" msgid="9193942041912927440">"चार बोटांनी डावीकडे किंवा उजवीकडे स्वाइप करा"</string>
@@ -3354,7 +3354,7 @@
     <string name="work_sync_dialog_yes" msgid="5785488304957707534">"कन्फर्म करा"</string>
     <string name="work_sync_dialog_message" msgid="5066178064994040223">"तुमची कार्य प्रोफाइल ही तुमच्या वैयक्तिक प्रोफाइलसारखाच आवाज वापरेल"</string>
     <string name="configure_notification_settings" msgid="1492820231694314376">"सूचना"</string>
-    <string name="notification_dashboard_summary" msgid="7530169251902320652">"सूचना इतिहास, संभाषणे"</string>
+    <string name="notification_dashboard_summary" msgid="7530169251902320652">"नोटिफिकेशन इतिहास, संभाषणे"</string>
     <string name="conversation_notifs_category" msgid="2549844862379963273">"संभाषण"</string>
     <string name="general_notification_header" msgid="3669031068980713359">"व्यवस्थापित करा"</string>
     <string name="app_notification_field" msgid="3208079070539894909">"अ‍ॅप सूचना"</string>
