--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -3372,7 +3372,7 @@
     <string name="asst_importance_reset_summary" msgid="684794589254282667">"Resetovanie nastavení dôležitosti zmenených používateľom a povolenie priorizácie v asistentovi upozornení"</string>
     <string name="asst_capabilities_actions_replies_title" msgid="4392470465646394289">"Navrhované akcie a odpovede"</string>
     <string name="asst_capabilities_actions_replies_summary" msgid="416234323365645871">"Automaticky zobrazovať navrhované akcie a odpovede"</string>
-    <string name="notification_history_summary" msgid="5434741516307706892">"Zobrazovať nedávne a stlmené upozornenia"</string>
+    <string name="notification_history_summary" msgid="5434741516307706892">"Zobraziť nedávne a stlmené upozornenia"</string>
     <string name="notification_history" msgid="8663811361243456201">"História upozornení"</string>
     <string name="notification_history_toggle" msgid="9093762294928569030">"Používať históriu upozornení"</string>
     <string name="notification_history_off_title_extended" msgid="853807652537281601">"História upozornení je vypnutá"</string>
@@ -3403,7 +3403,7 @@
     <string name="bubble_app_setting_bubble_conversation" msgid="1461981680982964285">"Zapnúť bubliny pre túto konverzáciu"</string>
     <string name="swipe_direction_ltr" msgid="5137180130142633085">"Doprava: zavrieť, doľava: zobraziť ponuku"</string>
     <string name="swipe_direction_rtl" msgid="1707391213940663992">"Doľava: zavrieť, doprava: zobraziť ponuku"</string>
-    <string name="silent_notifications_status_bar" msgid="6113307620588767516">"Skryť tiché upozornenia v stavovom riadku"</string>
+    <string name="silent_notifications_status_bar" msgid="6113307620588767516">"Skrývať tiché upozornenia v stavovom riadku"</string>
     <string name="notification_pulse_title" msgid="8013178454646671529">"Blikať"</string>
     <string name="lock_screen_notifications_title" msgid="2876323153692406203">"Ochrana súkromia"</string>
     <string name="lockscreen_bypass_title" msgid="6519964196744088573">"Preskakovať uzamknutú obrazovku"</string>
@@ -3415,7 +3415,7 @@
     <string name="lock_screen_notifs_title" msgid="3412042692317304449">"Upozornenia na uzamknutej obrazovke"</string>
     <string name="lock_screen_notifs_show_all_summary" msgid="4226586018375762117">"Zobrazovať konverzácie, predvolené aj tiché"</string>
     <string name="lock_screen_notifs_show_all" msgid="1300418674456749664">"Zobrazovať konverzácie, predvolené aj tiché"</string>
-    <string name="lock_screen_notifs_show_alerting" msgid="6584682657382684566">"Skrývať tiché konverzácie a upozornenia"</string>
+    <string name="lock_screen_notifs_show_alerting" msgid="6584682657382684566">"Skryť tiché konverzácie a upozornenia"</string>
     <string name="lock_screen_notifs_show_none" msgid="1941044980403067101">"Nezobrazovať žiadne upozornenia"</string>
     <string name="lock_screen_notifs_redact" msgid="9024158855454642296">"Citlivé upozornenia"</string>
     <string name="lock_screen_notifs_redact_summary" msgid="1395483766035470612">"Zobrazovať po uzamknutí citlivý obsah"</string>
