Update auto on text.
Test: atest
Bug: 339681774
Change-Id: I9c7d013b7d1615c04b26b98bb3408f56406a5ee0

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -133,7 +133,7 @@
     <!-- Keywords for bluetooth pairing item [CHAR LIMIT=30] -->
     <string name="keywords_add_bt_device">bluetooth</string>
     <!-- Title for bluetooth auto on toggle [CHAR LIMIT=60] -->
-    <string name="bluetooth_screen_auto_on_title">Automatically turn on again tomorrow</string>
+    <string name="bluetooth_screen_auto_on_title">Automatically turn on tomorrow</string>
 
 
     <!-- Button to help user to pair right ear of the hearing aid device. It will show when only one of the hearing aid device set is connected. [CHAR LIMIT=20] -->
